# opengl_tutorials

./: CMakeLists.txt
lib/: CMakeLists.txt  gl_helpers.hpp  gl_wrappers.hpp
src/: CMakeLists.txt  opengl_window.cpp
src/opengl_camera/: CMakeLists.txt  opengl_camera.cpp
src/opengl_coord_systems/: CMakeLists.txt  opengl_coord_systems.cpp
src/opengl_coord_systems/shaders/: simple.vert
src/opengl_shaders/: CMakeLists.txt  opengl_shaders.cpp
src/opengl_shaders/shaders/: color.frag  simple.vert
src/opengl_square/: CMakeLists.txt  opengl_square.cpp
src/opengl_square/shaders/: triangle.vert
src/opengl_texture/: CMakeLists.txt  opengl_texture.cpp
src/opengl_texture/shaders/: color.frag  simple.vert
src/opengl_transformation/: CMakeLists.txt  opengl_transformation.cpp
src/opengl_transformation/shaders/: simple.vert
src/opengl_triangle/: CMakeLists.txt  opengl_2triangles.cpp  opengl_triangle.cpp
src/opengl_triangle/shaders/: red.frag  yellow.frag
src/opengl_window/: CMakeLists.txt
